--- a/travlr/.gitignore
+++ b/travlr/.gitignore
@@ -54,7 +54,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment variables file // Pw for travlr
 .env
 
 # next.js build output
